--- a/app/src/main/res/layout/users_fragment.xml
+++ b/app/src/main/res/layout/users_fragment.xml
@@ -5,7 +5,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:background="@color/colorPrimaryDark"
-  tools:context=".ui.UsersFragment">
+  tools:context=".ui.users.UsersFragment">
 
   <TextView
     android:id="@+id/title"
