--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,6 +7,6 @@
 
   <fragment
     android:id="@+id/usersFragment"
-    android:name="com.picpay.desafio.android.ui.UsersFragment"
+    android:name="com.picpay.desafio.android.ui.users.UsersFragment"
     tools:layout="@layout/users_fragment" />
 </navigation>
