--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,9 @@
   android:layout_height="match_parent"
   android:background="@color/colorPrimaryDark">
 
-  <androidx.fragment.app.FragmentContainerView
+  <fragment
     android:id="@+id/nav_host_fragment"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="@dimen/none"
     android:layout_height="@dimen/none"
     app:defaultNavHost="true"
